# order_dependency_problem

./: README.md  pyproject.toml
data/arc/: ARC-Challenge-Dev.jsonl  ARC-Challenge-Test.jsonl
notebooks/: explore_order_dependency_problem.ipynb  report.json
src/order_dependency_problem/: dataset.py  evaluation.py  quesiton_answering.py
