[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
description = "My project description"
authors = [
    {name = "Qibin Zhou", email = "zhouqb.zq@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-openai",
    "pandas",
    "numpy",
    "jupyter",
    "ipython",
    "matplotlib",
    "pydantic",
    "thefuzz",
]
